# mdaa

./: .gitignore  Directory.Build.props  GlobalSuppressions.cs  LIESMICH.md  README.md  stylecop.json
Core/: Core.sln
Core/DataRouter/: CommandLineOptions.cs  DataRouter.cs  DataRouter.csproj  InformationSubscriber.cs  Program.cs
Core/DataRouter/Docker/: Dockerfile  entrypoint.sh
Core/IntegrationModuleSimulator/: IntegrationModuleSimulator.csproj  Program.cs
Core/Manager/: CommandLineOptions.cs  InstructionalModel.cs  Manager.cs  Manager.csproj  Program.cs  RegistrationResponder.cs
Core/Manager/Config/: Model.json
Core/Manager/Docker/: Dockerfile  entrypoint.sh
Core/Shared/: Shared.csproj
Core/Shared/Communication/: MessagePublisher.cs  MessageSubscriber.cs
Core/Shared/Communication/Messages/: ConfigurationMessage.cs  Information.cs  InstructionsMessage.cs  Message.cs  RegistrationMessage.cs
Core/Shared/Modules/: CommandLineOptions.cs  Module.cs
Core/Shared/Modules/IntegrationModules/BeckhoffAds/: BeckhoffAdsIntegrationModuleConfigurationMessage.cs  BeckhoffAdsIntegrationModuleInstructionsMessage.cs  BeckhoffAdsSymbol.cs
Core/Shared/Modules/IntegrationModules/Mqtt/: MqttInformation.cs  MqttIntegrationModuleConfigurationMessage.cs  MqttIntegrationModuleInstructionsMessage.cs  MqttJsonMode.cs  MqttMode.cs  MqttPlainMode.cs
Core/Shared/Modules/OperationModules/: OperationModule.cs  Operator.cs
Core/Shared/Modules/OperationModules/Aggregation/: AggregationConfig.cs  AggregationModuleConfigurationMessage.cs
Core/Shared/Modules/OperationModules/Math/: MathOperationModuleConfigurationMessage.cs  MathOperatorConfig.cs
Docker/: .env  BuildAllImages.ps1  docker-compose.yml
IntegrationModules/: IntegrationModules.sln
IntegrationModules/BeckhoffAds/: BeckhoffAds_InfoSet.h  BeckhoffAds_IntegrationModule.h  BeckhoffAds_SymbolInfo.h  main.cpp
IntegrationModules/CppCommon/: CMakeLists.txt  Handler.h  IntegrationModule.h  open62541_common.h  zmq_common.h
IntegrationModules/Mqtt/: Mqtt.csproj
IntegrationModules/Mqtt/Docker/: Dockerfile
IntegrationModules/Mqtt/Properties/: launchSettings.json
IntegrationModules/MqttClient/: MqttIntegrationModule.cs  MqttIntegrationModule.csproj  Program.cs
IntegrationModules/OpcUaClient/: CMakeLists.txt  OpcUaClient_Handler.h  OpcUaClient_Info.h  OpcUaClient_IntegrationModule.h  main.h
IntegrationModules/OpcUaClient/Docker/: Dockerfile
IntegrationModules/OpcUaServer/: CMakeLists.txt  OpcUaServer_Handler.h  OpcUaServer_Info.h  OpcUaServer_InfoSet.h  OpcUaServer_IntegrationModule.h  main.cpp  main.h
IntegrationModules/OpcUaServer/Docker/: Dockerfile
IntegrationModules/adsClient/: AdsClient_Handler.h  AdsClient_Info.h  AdsClient_InfoSet.h  AdsClient_IntegrationModule.h  CMakeLists.txt  main.cpp
OperationModules/: Aggregation.cs  OperationModules.sln  Program.cs
OperationModules/Aggregation/: Aggregation.cs  Aggregation.csproj  AggregationModule.cs  Program.cs
OperationModules/Aggregation/Docker/: Dockerfile  entrypoint.sh
OperationModules/Math/: Math.csproj  MathOperationModule.cs  MathOperator.cs  Program.cs
OperationModules/Math/Docker/: Dockerfile
scripts/: PushAllDockerImages.ps1
src/: Core.sln  IntegrationModules.sln  MDAA.sln  OperationModules.sln
src/Core.DataRouter/: CommandLineOptions.cs  Core.DataRouter.csproj  DataRouter.cs  InformationSubscriber.cs  Program.cs
src/Core.DataRouter/Docker/: Dockerfile  docker-compose.yml
src/Core.Manager/: CommandLineOptions.cs  Core.Manager.csproj  ModelManager.cs  ModuleCommunicationHandler.cs  Program.cs  Startup.cs
src/Core.Manager/Config/: Model.json
src/Core.Manager/Controller/Docker/: DataRouterDockerContainerController.cs  DockerContainerController.cs  ManagerDockerContainerController.cs  ModuleDockerContainerController.cs
src/Core.Manager/Docker/: Dockerfile  docker-compose.yml
src/Core.Manager/Model/: InstructionalModelParser.cs
src/Core.Manager/Model/InstructionalModel/: InstructionalModel.cs
src/Core.Manager/Model/InstructionalModel/Information/: Information.cs  InformationToGet.cs  InformationToProvide.cs  InformationType.cs
src/Core.Manager/Model/InstructionalModel/IntegrationModules/: Module.cs  ModuleConfiguration.cs  ModuleType.cs  MqttModule.cs  (+5 more)
src/Docker/: .env  docker-compose.yml
src/Docker/Config/: Model.json
src/IntegrationModule.Ads/: BeckhoffAds_Handler.h  BeckhoffAds_IntegrationModule.h  CMakeLists.txt
src/IntegrationModule.CppCommon/: Info.h  InfoSet.h
src/IntegrationModule.Mqtt/: IntegrationModule.Mqtt.csproj  MqttIntegrationModule.cs  Program.cs
src/IntegrationModule.Mqtt/Docker/: .dockerignore  Dockerfile  docker-compose.yml
src/IntegrationModule.Mqtt/Properties/: launchSettings.json
src/IntegrationModule.OpcUaClient/: CMakeLists.txt  OpcUaClient_Handler.h  OpcUaClient_InfoSet.h  main.cpp
src/OperationModule.Aggregation/: Aggregation.cs  AggregationModule.cs  OperationModule.Aggregation.csproj  Program.cs
src/OperationModule.Aggregation/Docker/: Dockerfile  docker-compose.yml
src/OperationModule.Aggregation/Properties/: launchSettings.json
src/OperationModule.Math/: MathOperationModule.cs  MathOperator.cs  OperationModule.Math.csproj  Program.cs
src/OperationModule.Math/Docker/: Dockerfile  docker-compose.yml
src/OperationModule.Math/Properties/: launchSettings.json
src/Shared/: Shared.csproj
src/Shared/Communication/: MessagePublisher.cs  MessageSubscriber.cs
src/Shared/Communication/Messages/: ConfigurationMessage.cs  InformationMessage.cs  InstructionsMessage.cs  Message.cs  MessageCommand.cs  RegistrationMessage.cs
src/Shared/Configuration/: CommandLineOptions.cs
src/Shared/Model/: InstructionalModel.cs
src/Shared/Model/Informations/: Information.cs  InformationToGet.cs  InformationToProvide.cs  InformationType.cs
src/Shared/Model/Modules/: Module.cs  ModuleConfiguration.cs  ModuleState.cs  ModuleType.cs
src/Shared/Model/Operations/: Operation.cs
src/Shared/Modules/: BaseModule.cs  BaseOperationModule.cs
tests/TestProject/: Program.cs  TestProject.csproj
(+45 files in other folders)
